Fri Jul 14 02:11:21 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
          Added new test for Bug 2593 to nightly suite.

Thu Jul 13 20:40:10 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed references to ACE_HAS_ATTR_SETSCHED. It's no longer
          used in ACE/TAO/CIAO code.

        * ace/config-rtems.h:
          Removed references to ACE_HAS_SIGNAL_SAFE_OS_CALLS. It's no longer
          used in ACE/TAO/CIAO code.

        * ace/config-sco-5.0.0-mit-pthread.h:
          Removed references to ACE_HAS_T_OPMGMT. It's no longer
          used in ACE/TAO/CIAO code.

Thu Jul 13 10:35:39 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/Base_Thread_Adapter.cpp:
        * ace/Cleanup.cpp:
        * ace/OS.cpp:
        * ace/OS_Errno.cpp:
        * ace/OS_Log_Msg_Attributes.cpp:
        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_arpa_inet.cpp:
        * ace/OS_NS_ctype.cpp:
        * ace/OS_NS_dirent.cpp:
        * ace/OS_NS_dlfcn.cpp:
        * ace/OS_NS_errno.cpp:
        * ace/OS_NS_fcntl.cpp:
        * ace/OS_NS_math.cpp:
        * ace/OS_NS_netdb.cpp:
        * ace/OS_NS_poll.cpp:
        * ace/OS_NS_pwd.cpp:
        * ace/OS_NS_regex.cpp:
        * ace/OS_NS_signal.cpp:
        * ace/OS_NS_stdio.cpp:
        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_string.cpp:
        * ace/OS_NS_strings.cpp:
        * ace/OS_NS_stropts.cpp:
        * ace/OS_NS_sys_mman.cpp:
        * ace/OS_NS_sys_msg.cpp:
        * ace/OS_NS_sys_resource.cpp:
        * ace/OS_NS_sys_select.cpp:
        * ace/OS_NS_sys_sendfile.cpp:
        * ace/OS_NS_sys_shm.cpp:
        * ace/OS_NS_sys_socket.cpp:
        * ace/OS_NS_sys_stat.cpp:
        * ace/OS_NS_sys_time.cpp:
        * ace/OS_NS_sys_uio.cpp:
        * ace/OS_NS_sys_wait.cpp:
        * ace/OS_NS_time.cpp:
        * ace/OS_NS_unistd.cpp:
        * ace/OS_NS_wchar.cpp:
        * ace/OS_TLI.cpp:
        * ace/Thread_Adapter.cpp: